# dd_draw

./: .gitignore  README.jp.md  README.md  pyproject.toml
data/: build_sample_drugs.py  sample_drugs.sdf  sample_drugs.smi
dd_draw/: __init__.py  cli.py  depict.py  io_utils.py  layout.py  render_html.py  render_pdf.py
dd_draw/templates/: grid.html
tests/: test_cli.py  test_depict.py  test_io_utils.py  test_layout.py  test_render_html.py  test_render_pdf.py
